--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
     "presets":[
-        "es2015", "react"
-    ]
+        "es2015", "stage-0" , "react"
+    ],
+
+      "plugins": [
+        ["import", { libraryName: "antd", style: "css" }]
+      ]
+
 }
