--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
   "author": "Ryan",
   "license": "ISC",
   "devDependencies": {
+    "antd": "^2.12.8",
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^3.5.5",
     "webpack-bundle-tracker": "^0.2.0"
+  },
+  "dependencies": {
+    "css-loader": "^0.28.7",
+    "style-loader": "^0.18.2"
   }
 }
