--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "vue": "^2.4.2",
+    "vue-antd": "^0.2.9",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
