增加python配置文件

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3"
+    "python.linting.pylintArgs": ["--load-plugins", "pylint_django"],
+    "python.envFile": "${workspaceRoot}/.python-version"
 }
