--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,7 +66,7 @@
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
-    "phantomjs-prebuilt": "2.1.13",
+    "phantomjs-prebuilt": "^2.1.15",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
