--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.linting.pylintArgs": ["--load-plugins", "pylint_django"],
     "python.envFile": "${workspaceRoot}/.python-version",
-    "python.venvPath": "/usr/local/var/pyenv"
+    "python.venvPath": "/usr/local/var/pyenv",
+    "python.linting.pylintEnabled": false
 }
