--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "element-ui": "^1.4.4",
     "iview": "^2.3.0",
     "vue": "^2.4.2",
     "vue-antd": "^0.2.9",
