--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,3 +2,5 @@ Django==1.11.4
 djangorestframework==3.6.4
 django-webpack-loader==0.5.0
 django-cors-headers==2.1.0
+django-rest-auth==0.9.1
+django-allauth
